# bed2idt

./: 404.html  README.md  index.html  nibcs_v2.0.1.xlsx  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  pytest.yml  python-publish.yml
bed2idt/: cli.py  config.py  main.py
cli/: index.html
docs/: cli.md
search/: search_index.json
tests/: test_bedfile.py  test_cli.py  test_funcs.py
tests/test_output/: output.xlsx
