[project]
name = "bed2idt"
version = "1.2.1"
description = "Converts primer.bed files to IDT ordering templates"
authors = [{ name = "ChrisKent", email = "chrisgkent@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "CC-BY-SA-4.0"
dependencies = [
    "xlsxwriter>=3.1.2,<4",
    "typer[all]>=0.12.2,<0.13",
    "primalbedtools>=0.10.1,<0.11",
]

[project.scripts]
bed2idt = "bed2idt.main:app"

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8",
    "ruff>=0.3.4,<0.4",
    "pre-commit>=4.0.1,<5",
    "pandas>=2.3.1,<3",
    "openpyxl>=3.1.5,<4",
]
docs = ["mkdocs-material>=9.5.27,<10"]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

